<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#9cbbed">


    <TextView
        android:id="@+id/textView_select_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select a Book from list:"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownWidth="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Purchase Choice:"
        android:textColor="@color/colorAccent" />

    <RadioGroup
        android:id="@+id/radio"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/used_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Used Book"
            android:textColor="@color/colorPrimaryDark" />

        <RadioButton
            android:id="@+id/new_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Book"
            android:textColor="@color/colorPrimaryDark" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quantity:"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/edit_text_book_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number of books"
        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:id="@+id/button_show_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:shadowColor="@color/colorAccent"
        android:text="Show Cost"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
         />

    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />


</LinearLayout>